# CurrencyConverter/src/main/resources/api.yaml
@@ -157,3 +157,15 @@ components:
           type: boolean
         vat_number:  
           type: string
+    ResponseError:
+      properties:
+        errorCode:
+          type: integer
+        errorMessage:
+          type: string       
+        detailedMessage:
+          type: string
+        exceptionName:
+          type: string
+        createdAt:
+          type: string      
